tests/ui/const-generics/associated-const-bindings/coherence.stderr
error[E0119]: conflicting implementations of trait `Maybe` for type `()`
  --> $DIR/coherence.rs:15:1
   |
LL | impl Maybe for () {}
   | ----------------- first implementation here
LL | impl Maybe for () where (): IsVoid<IS_VOID = true> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
